# Somba

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  alembic.ini  app.py  docker-compose.yml  docs.md  main.py  pxxl.toml  pyproject.toml  requirements.txt  somba.db  team-plan.txt
.github/workflows/: ci.yml  deploy.yml
docs/: api-reference.md  architecture.md  data-model.md  deployment.md  getting-started.md  nfrs.md  overview.md  proration.md  reconciliation.md  recovery-engine.md  state-machine.md
frontend/: index.html  package-lock.json
frontend/prompts/: landing.md
frontend/src/: App.jsx  index.css
gymflow/: .env.example  README.md  package-lock.json  package.json
gymflow/app/: globals.css  layout.tsx  page.tsx
gymflow/components/: AppShell.tsx  ChangePlanDialog.tsx  Chips.tsx  DemoControls.tsx  LifecycleRail.tsx  MembershipCard.tsx  Providers.tsx  SiteHeader.tsx  StateBadge.tsx  ui.tsx
gymflow/lib/: api.ts  format.ts  money.ts  plans.ts  states.ts  store.ts  types.ts
pitch-video/: README.md  SCRIPT.md  index.html  music.js  style.css  video.js
scripts/: create_topics.py  seed_demo.py
scripts/live/: 01_smoke_test.sh  02_recovery_test.sh  03_payment_uncertain_test.sh  04_proration_test.sh  05_isolation_test.sh  common.sh  run_all.sh
somba/: __init__.py  security.py
somba/api/: __init__.py  app.py  auth.py  customers.py  errors.py  events.py  invoices.py  metrics.py  plans.py  sandbox.py  subscriptions.py  webhooks.py
somba/db/: __init__.py  models.py  session.py
tests/: __init__.py  conftest.py
(+137 files in other folders)
