[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "somba"
version = "0.1.0"
description = "Somba recurring billing and recovery infrastructure"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.8",
  "uvicorn[standard]==0.39.0",
  "sqlalchemy==2.0.45",
  "bcrypt==4.3.0",
]
